--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.la.playground3">
     <!-- 震动权限 -->
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -10,12 +11,30 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.MyApplication"
+        tools:replace="android:icon, android:theme">
+        <activity
+            android:name=".view.apps.demo.citypicker.CityPickerJDActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.apps.demo.citypicker.CityPickerThreeListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.apps.demo.citypicker.CityPickerSingleListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.apps.demo.citypicker.CityPickerCustomDataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.apps.demo.citypicker.CityPickerMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.apps.demo.CityPickerActivity"
+            android:exported="false" />
         <activity
             android:name=".view.apps.demo.chart.MPAndroidChartMainActivity"
             android:exported="false"
-            android:label="@string/title_activity_mpandroid_chart_main"
-            android:theme="@style/Theme.MyApplication.NoActionBar" />
+            android:label="@string/title_activity_mpandroid_chart_main" />
         <activity
             android:name=".view.apps.demo.MPAndroidChartActivity"
             android:exported="false" />
@@ -77,6 +96,7 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
